--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,7 @@ features = [
 	"signal",
 	"rt-multi-thread"
 ]
+
+[dependencies.redis]
+version = "0.21"
+features = ["aio", "tokio-comp", "connection-manager"]
