--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /target
+data/dump.rdb
 
 # Created by https://www.toptal.com/developers/gitignore/api/rust,vim,visualstudiocode,dotenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=rust,vim,visualstudiocode,dotenv
