--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -15,12 +15,9 @@ jobs:
       contents: read
       packages: write
     
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      
+    steps:      
       - name: Login to the Container registry
-        uses: docker/login-action
+        uses: docker/login-action@v1
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -28,14 +25,13 @@ jobs:
       
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action
+        uses: docker/metadata-action@v3
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         
       - name: Build and push docker image
-        uses: docker/build-push-action
+        uses: docker/build-push-action@v2
         with:
-          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
