--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ serenity = "0.10"
 dotenv = "0.15"
 
 log = "0.4"
-env_logger = "0.9"
+
+tracing = "0.1"
+tracing-subscriber = "0.2"
 
 chrono = "0.4"
 
