--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serenity = "0.10"
-
 dotenv = "0.15"
 
 log = "0.4"
@@ -16,6 +14,20 @@ tracing = "0.1"
 tracing-subscriber = "0.2"
 
 chrono = "0.4"
+
+[dependencies.serenity]
+version = "0.10"
+default-features = false
+features = [
+	"rustls_backend",
+	"cache",
+	"client",
+	"framework",
+	"gateway",
+	"model",
+	"standard_framework",
+	"utils",
+]
 
 [dependencies.tokio]
 version = "1"
