--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ tracing-subscriber = "0.2"
 
 chrono = "0.4"
 
+derive_more = "0.99"
+
 [dependencies.serenity]
 version = "0.10"
 default-features = false
