--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,5 @@ services:
     # Uncomment the following lines if you want to access the database from the outside network
     # This might be useful when developing and not wanting to manage the database as a service
     # However it is not recommended otherwise as it leaves the database open to any other process on the host or network
-    ports:
-       - 6379:6379
+    # ports:
+    #   - 6379:6379
