--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,30 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serenity = "0.10"
-
 dotenv = "0.15"
 
 log = "0.4"
-env_logger = "0.9"
+
+tracing = "0.1"
+tracing-subscriber = "0.2"
+
+chrono = "0.4"
+
+derive_more = "0.99"
+
+[dependencies.serenity]
+version = "0.10"
+default-features = false
+features = [
+	"rustls_backend",
+	"cache",
+	"client",
+	"framework",
+	"gateway",
+	"model",
+	"standard_framework",
+	"utils",
+]
 
 [dependencies.tokio]
 version = "1"
@@ -20,3 +38,7 @@ features = [
 	"signal",
 	"rt-multi-thread"
 ]
+
+[dependencies.redis]
+version = "0.21"
+features = ["aio", "tokio-comp", "connection-manager"]
