--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ chrono = "0.4"
 
 derive_more = "0.99"
 
+reqwest = "0.11"
+
 [dependencies.serenity]
 version = "0.10"
 default-features = false
@@ -42,3 +44,7 @@ features = [
 [dependencies.redis]
 version = "0.21"
 features = ["aio", "tokio-comp", "connection-manager"]
+
+[dependencies.serde]
+version = "1"
+features = ["derive"]
