--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,9 @@
 on:
   push:
-    branches: master
-    tags: [0-9]+.[0-9]+.[0-9]+
+    branches:
+      - master
+    tags:
+      - '[0-9]+.[0-9]+.[0-9]+'
     
 env:
   REGISTRY: ghcr.io
