data: Teach gompei to connect to postgres
This enables intercommunication between the discord bot and the web
verification service. New verifications will come in from the Flask app,
and every so often the bot should run through the new ones.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,3 +48,8 @@ features = ["aio", "tokio-comp", "connection-manager"]
 [dependencies.serde]
 version = "1"
 features = ["derive"]
+
+[dependencies.sqlx]
+version = "0.5"
+features = ["postgres", "macros", "migrate", "runtime-tokio-native-tls"]
+
